--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 attrs==17.4.0
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
 Flask==0.12.2
 Flask-Testing==0.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
@@ -10,5 +13,7 @@ pkg-resources==0.0.0
 pluggy==0.6.0
 py==1.5.3
 pytest==3.5.0
+requests==2.18.4
 six==1.11.0
+urllib3==1.22
 Werkzeug==0.14.1
