--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==17.4.0
+beautifulsoup4==4.6.0
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
@@ -14,6 +15,7 @@ pluggy==0.6.0
 py==1.5.3
 pytest==3.5.0
 requests==2.18.4
+selenium==3.11.0
 six==1.11.0
 urllib3==1.22
 Werkzeug==0.14.1
