--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,17 @@ chardet==3.0.4
 click==6.7
 Flask==0.12.2
 Flask-Testing==0.7.1
+gunicorn==19.8.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 more-itertools==4.1.0
-pkg-resources==0.0.0
 pluggy==0.6.0
 py==1.5.3
 pytest==3.5.0
 requests==2.18.4
+requests-mock==1.5.0
 selenium==3.11.0
 six==1.11.0
 urllib3==1.22
